--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,14 @@ dependencies {
     // Kotlin components
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+    def lifecycle_version = "2.2.0"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+
 }
